Completed TOP > Foundation > Lists

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,13 +5,41 @@
     <title>The Odin Project Materials</title>
   </head>
   <body>
-    <h1>Main Blog Title</h1>
-    <h2>Blog Title 1</h2>
+    <h1>THE ODIN PROJECT</h1>
+    <h2>WORKING WITH TEXT</h2>
+    <h3>Blog Title 1</h3>
     <p>
       <strong>Strong</strong> <em>Italic</em> Lorem ipsum dolor, sit amet
       consectetur adipisicing elit. Omnis officia dolores dolore commodi aliquid
       maiores placeat beatae quasi odit neque corporis, sequi culpa assumenda
       nostrum error, laborum quidem veritatis nulla.
     </p>
+    <h2>LISTS</h2>
+    <h3>Unordered List - Food</h3>
+    <ul>
+      <li>Cheese cake</li>
+      <li>Mango</li>
+      <li>Prawns</li>
+    </ul>
+    <h3>Ordered List - Todo's</h3>
+    <ol>
+      <li>Code</li>
+      <li>Organise</li>
+      <li>Eat</li>
+    </ol>
+    <h3>Unordered List - Places</h3>
+    <ul>
+      <li>Brazil</li>
+      <li>Spain</li>
+      <li>Portugal</li>
+    </ul>
+    <h3>Ordered List - Games</h3>
+    <ol>
+      <li>God of War</li>
+      <li>Gears of War</li>
+      <li>Uncharted</li>
+      <li>Rocket League</li>
+      <li>Batman</li>
+    </ol>
   </body>
 </html>
