Completed TOP Foundation > HTML Foundation > Links and images

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>The Odin Project Materials</title>
+    <title>TOP - Text</title>
   </head>
   <body>
-    <h1>THE ODIN PROJECT</h1>
+    <h1>THE ODIN PROJECT - TEXT</h1>
     <h2>WORKING WITH TEXT</h2>
     <h3>Blog Title 1</h3>
     <p>
