--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about" target="blank_">Click me</a>
-    <a href="./pages/about.html">About</a>
+    <a alt="image of dog" href="./pages/about.html">About</a>
 
     <img src="images/dog.jpg" />
   </body>
