Complete drop-down menu using javascript and css

--- a/dynamic-ui-interactions/drop-down/index.html
+++ b/dynamic-ui-interactions/drop-down/index.html
@@ -4,9 +4,120 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style type="text/css" src="./style.css"></style>
+    <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" type="text/javascript" defer></script>
     <title>Drop-Down Menu</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Dropdown 1 -->
+    <nav>
+      <ul class="drop-down">
+        <li>
+          Main Text 1
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 2
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 3
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <!-- Dropdown 2 -->
+
+      <ul class="drop-down">
+        <li>
+          Main Text 1
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 2
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 3
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <!-- Dropdown 2 -->
+
+      <ul class="drop-down">
+        <li>
+          Main Text 1
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 2
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+        <li>
+          Main Text 3
+          <ul>
+            <li><a href="#">Link-1</a></li>
+            <li><a href="#">Link-2</a></li>
+            <li><a href="#">Link-3</a></li>
+            <li><a href="#">Link-4</a></li>
+            <li><a href="#">Link-5</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Show menu on hover/click -->
+    <!-- Hardcode menu into HTML -->
+    <!-- Can repeat dropdown without repeating code -->
+    <!-- Bundle code into module and publish to npm -->
+  </body>
 </html>
