Style slider and start building functions to control next/prev

--- a/dynamic-ui-interactions/image-slider/index.html
+++ b/dynamic-ui-interactions/image-slider/index.html
@@ -8,5 +8,18 @@
     <script type="text/javascript" src="./script.js" defer></script>
     <title>Image Slider</title>
   </head>
-  <body></body>
+  <body>
+    <div id="slider-component">
+      <button class="s-prev">&#60</button>
+      <div class="image-slider">
+        <div class="slider-wrap">
+          <img src="./img1.jpg" alt="img" />
+          <img src="./img2.jpg" alt="img" />
+          <img src="./img3.jpg" alt="img" />
+          <img src="./img4.jpg" alt="img" />
+        </div>
+      </div>
+      <button class="s-next">&#62</button>
+    </div>
+  </body>
 </html>
