Add navigation buttons, function to highlight active nav button

--- a/dynamic-ui-interactions/image-slider/index.html
+++ b/dynamic-ui-interactions/image-slider/index.html
@@ -20,6 +20,7 @@
         </div>
       </div>
       <button class="s-next">&#62</button>
+      <ul class="nav-dots"></ul>
     </div>
   </body>
 </html>
